Array Converter Test Error